tests/integration/fixtures/sample_org/objects/Lead/fields/Archived_Reason__c.field-meta.xml
<CustomField>
    <fullName>Archived_Reason__c</fullName>
    <label>Archived Reason</label>
    <type>Text</type>
    <length>80</length>
</CustomField>