tests/integration/fixtures/sample_org/objects/Lead/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country Code</label>
    <type>Text</type>
    <length>2</length>
</CustomField>