tests/integration/fixtures/sample_org/objects/Lead/fields/Legacy_Segment__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Segment__c</fullName>
    <label>Legacy Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>SMB</fullName><default>false</default></value>
            <value><fullName>Enterprise</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>