tests/integration/fixtures/sample_org/objects/Lead/fields/Old_Segment__c.field-meta.xml
<CustomField>
    <fullName>Old_Segment__c</fullName>
    <label>Old Segment (deprecated)</label>
    <type>Text</type>
    <length>40</length>
</CustomField>