tests/integration/fixtures/sample_org/objects/Lead/fields/Routed__c.field-meta.xml
<CustomField>
    <fullName>Routed__c</fullName>
    <label>Routed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>