tests/integration/fixtures/sample_org/objects/Lead/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>