tests/integration/fixtures/sample_org/objects/Lead/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Lookup</type>
    <referenceTo>Territory__c</referenceTo>
    <relationshipName>Leads</relationshipName>
</CustomField>