tests/integration/fixtures/sample_org/objects/Lead/fields/Test_Flag__c.field-meta.xml
<CustomField>
    <fullName>Test_Flag__c</fullName>
    <label>Test Flag</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>