tests/integration/fixtures/sample_org/objects/Lead/validationRules/Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Required</fullName>
    <active>true</active>
    <description>Web leads must carry an email address.</description>
    <errorConditionFormula>AND(ISPICKVAL(LeadSource, "Web"), ISBLANK(Email), NOT($Permission.Bypass_Validation))</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Email is required for web leads.</errorMessage>
</ValidationRule>